[tool.poetry]
name = "tem5"
version = "0.1.0"
description = ""
authors = ["github <github>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.2"
pandas= "1.5.3"
Pillow= "9.4.0"
pip= "23.0.1"
plotly="5.1.0"
plotly-express="0.4.1"
requests="2.28.2"
selenium="4.8.2"
streamlit="1.19.0"
urllib3="1.26.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
